--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-router-storage",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Router storage & resolve solution for Vue.js 2 & vue-router 2",
-  "author": "James Yeang <shunjiey@hotmail.com>",
+  "author": "James Yeung <shunjiey@hotmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
